# PaddleOCR-ncnn

./: local.properties
app/src/main/jni/: CMakeLists.txt
